Fix crazy margin on mobile

--- a/app/assets/stylesheets/claims-global.css.sass
+++ b/app/assets/stylesheets/claims-global.css.sass
@@ -105,6 +105,8 @@ header h1
   margin:
     right: 200px
     bottom: 30px
+  @include media(mobile)
+    margin-right: 50px
 
 .user-data
   border-bottom: 1px solid #ccc
